# inverse_matrix

./: CMakeLists.txt
src/: CMakeLists.txt  blas_inverse.cpp  blas_inverse.hpp  main.c  main.cpp  simple_inverse.cpp  simple_inverse.hpp
src/matrix_lib/: CMakeLists.txt  intrinsics_utils.c  matrix_lib.c  matrix_lib.h  matrix_utils.c  utils.c  utils.h
src/matrix_lib/utils/: intrinsics_utils.c  matrix_utils.c  types.h  utils.h
src/test_inverse/: blas_inverse.cpp  simple_inverse.cpp  simple_inverse.hpp
tests/: CMakeLists.txt  tests.cpp
